# derivkit

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  README.md  compare_deriv_methods.py  contributing.html  dali_demo.py  demo.py  demo_dali_getdist_corner.py  demo_gp.py  derivkit.adaptive.adaptive_fit.html  derivkit.adaptive.batch_eval.html  derivkit.adaptive.diagnostics.html  derivkit.adaptive.estimator.html  derivkit.adaptive.fit_core.html  derivkit.adaptive.grid.html  derivkit.adaptive.html  derivkit.adaptive.offsets.html  derivkit.adaptive.polyfit_utils.html  derivkit.adaptive.spacing.html  derivkit.adaptive.transforms.html  derivkit.adaptive.validate.html  derivkit.adaptive.weights.html  derivkit.calculus.gradient.html  derivkit.calculus.hessian.html  derivkit.calculus.html  derivkit.calculus.jacobian.html  derivkit.calculus_kit.html  derivkit.derivative_kit.html  derivkit.forecast_kit.html  derivkit.forecasting.calculus.html  derivkit.forecasting.expansions.html  derivkit.forecasting.html  derivkit.forecasting.likelihoods.html  derivkit.fornberg.html  derivkit.html  derivkit.local_polynomial_derivative.diagnostics.html  (+24 more)
.doctrees/: derivkit.adaptive.adaptive_fit.doctree  derivkit.adaptive.batch_eval.doctree  derivkit.adaptive.diagnostics.doctree  derivkit.adaptive.doctree  derivkit.adaptive.estimator.doctree  derivkit.adaptive.fit_core.doctree  derivkit.adaptive.grid.doctree  derivkit.adaptive.polyfit_utils.doctree  derivkit.adaptive.spacing.doctree  derivkit.adaptive.transforms.doctree  derivkit.calculus.doctree  derivkit.calculus.gradient.doctree  derivkit.calculus.hessian.doctree  derivkit.calculus.jacobian.doctree  derivkit.calculus_kit.doctree  derivkit.derivative_kit.doctree  derivkit.doctree  derivkit.forecast_kit.doctree  derivkit.forecasting.calculus.doctree  derivkit.forecasting.doctree  derivkit.forecasting.expansions.doctree  derivkit.forecasting.likelihoods.doctree  derivkit.fornberg.doctree  derivkit.local_polynomial_derivative.diagnostics.doctree  derivkit.local_polynomial_derivative.doctree  derivkit.local_polynomial_derivative.fit.doctree  derivkit.local_polynomial_derivative.local_poly_config.doctree  derivkit.local_polynomial_derivative.local_polynomial_derivative.doctree  derivkit.local_polynomial_derivative.sampling.doctree  derivkit.tabulated_model.doctree  derivkit.tabulated_model.one_d.doctree  derivkit.utils.concurrency.doctree  derivkit.utils.doctree  derivkit.utils.extrapolation.doctree  derivkit.utils.linalg.doctree  derivkit.utils.numerics.doctree  derivkit.utils.sandbox.doctree  derivkit.utils.validate.doctree  environment.pickle  index.doctree  (+1 more)
_sources/: derivkit.adaptive.polyfit_utils.rst.txt  derivkit.adaptive.rst.txt  derivkit.adaptive.transforms.rst.txt  derivkit.fornberg.rst.txt  derivkit.local_polynomial_derivative.sampling.rst.txt  derivkit.rst.txt  derivkit.tabulated_model.one_d.rst.txt  derivkit.utils.rst.txt
docs/: citation.rst  conf.py  contributing.rst  derivkit.adaptive.adaptive_fit.rst  derivkit.adaptive.polyfit_utils.rst  derivkit.adaptive.rst  derivkit.adaptive.spacing.rst  derivkit.autodiff.jax_autodiff.rst  derivkit.autodiff.jax_core.rst  derivkit.autodiff.jax_utils.rst  derivkit.autodiff.rst  derivkit.calculus.hessian.rst  derivkit.calculus.rst  derivkit.derivatives.adaptive.transforms.rst  derivkit.derivatives.autodiff.rst  derivkit.derivatives.finite.rst  derivkit.derivatives.local_polynomial_derivative.rst  derivkit.forecasting.integrations.getdist_dali_samples.rst  derivkit.forecasting.integrations.getdist_fisher_samples.rst  derivkit.forecasting.integrations.rst  derivkit.forecasting.integrations.sampling_utils.rst  derivkit.forecasting.priors.core.rst  derivkit.forecasting.priors.rst  derivkit.forecasting.rst  derivkit.forecasting.sampling_utils.rst  derivkit.likelihoods.rst  derivkit.local_polynomial_derivative.diagnostics.rst  derivkit.local_polynomial_derivative.local_poly_config.rst  derivkit.local_polynomial_derivative.local_polynomial_derivative.rst  derivkit.local_polynomial_derivative.rst  derivkit.logger.rst  derivkit.rst  derivkit.utils.rst  index.rst  installation.rst  license.rst  team.rst  workflows.rst
guide/: forecasting.html  installation.html  likelihoods.html  methods.html  quickstart.html
main/: .buildinfo  citation.html  contributing.html  derivkit.adaptive.adaptive_fit.html  derivkit.adaptive.batch_eval.html  derivkit.adaptive.diagnostics.html  derivkit.adaptive.grid.html  derivkit.adaptive.html  derivkit.adaptive.polyfit_utils.html  derivkit.adaptive.spacing.html  derivkit.adaptive.transforms.html  derivkit.calculus.calculus_core.html  derivkit.calculus.gradient.html  derivkit.calculus.hessian.html  derivkit.calculus.html  derivkit.calculus.hyper_hessian.html  derivkit.calculus.jacobian.html  derivkit.calculus_kit.html  derivkit.derivative_kit.html  derivkit.derivatives.adaptive.adaptive_fit.html  derivkit.derivatives.adaptive.batch_eval.html  derivkit.derivatives.adaptive.diagnostics.html  derivkit.derivatives.adaptive.grid.html  derivkit.derivatives.adaptive.html  derivkit.derivatives.adaptive.polyfit_utils.html  derivkit.derivatives.adaptive.spacing.html  derivkit.derivatives.adaptive.transforms.html  derivkit.derivatives.autodiff.html  derivkit.derivatives.autodiff.jax_autodiff.html  derivkit.derivatives.autodiff.jax_core.html  derivkit.derivatives.autodiff.jax_utils.html  derivkit.derivatives.finite.batch_eval.html  derivkit.derivatives.finite.core.html  derivkit.derivatives.finite.extrapolators.html  derivkit.derivatives.finite.finite_difference.html  derivkit.derivatives.finite.html  derivkit.derivatives.finite.stencil.html  derivkit.derivatives.fornberg.html  derivkit.derivatives.html  derivkit.derivatives.local_polynomial_derivative.diagnostics.html  (+56 more)
paper/: build.sh  derivkit.bib  paper.md
tests/: conftest.py  test_adaptive_fit.py  test_adaptive_fit_batch_eval.py  test_adaptive_fit_batch_eval_speed.py  test_adaptive_fit_grid.py  test_adaptive_fit_polyfit_utils.py  test_adaptive_fit_spacing.py  test_adaptive_fit_transforms.py  test_adaptive_transforms.py  (+92 more)
(+1899 files in other folders)
