[build-system]
requires = [
    "setuptools >= 80",
    "setuptools_scm[simple] >= 8"
]
build-backend = "setuptools.build_meta"

[project]
name = "derivkit"
dynamic = ["version"]
dependencies = [
  "numdifftools",
  "numpy",
  "multiprocess",
  "scipy",
  "tox",
]
authors = [
  { name="Nikolina Šarčević", email="nikolina.sarcevic@gmail.com" },
  { name="Matthijs van der Wild", email="matthijs@vanderwild.com" },
  { name="Cynthia Trendafilova", email="cyntrendafilova@gmail.com" },
]
description = "A robust toolkit for stable numerical derivatives"
readme = "README.md"
requires-python = ">3.9"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.optional-dependencies]
"test" = [
    "pytest",
]
"docs" = [
    "sphinx",
    "sphinx-design",
    "sphinx-multiversion",
    "furo",
]
"lint" = [
    "ruff",
]
"getdist" = [
    "getdist",
    "emcee",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# Here we list the styling/formatting rules that Ruff should use.
# A list of available rules and what each rule does is provided at
# https://docs.astral.sh/ruff/rules
select = ["E", "F", "W", "Q", "I", "D", "PLC0415"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["derivkit"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
requires = ["tox>=4.22"]
labels = { test = ["py310", "py311", "py312", "py313"] }
envlist = [
  "docs",
  "lint",
  "py310",
  "py311",
  "py312",
  "py313",
]

[tool.tox.env_run_base]
change_dir = "{tox_root}/tests"
description = "Run tests under {base_python}"
extras = ["test", "getdist"]
allowlist_externals = ["pytest"]
commands = [
    [
        "pytest",
        {replace = "posargs", extend = true},
    ],
]

[tool.tox.env_run_base.setenv]
PIP_CACHE_DIR = "{tox_root}/.cache/pip"

[tool.tox.env.docs]
description = "Build the HTML files using Sphinx"
extras = ["docs"]
allowlist_externals = ["cp"]
commands = [
  [
    "sphinx-apidoc",
    "-o", "{tox_root}/docs",
    "{tox_root}/src/derivkit",
    "--separate",
    "-f",
  ],
  [
    "sphinx-multiversion",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
  [
    "cp",
    "{tox_root}/docs/_templates/pages_redirect.html",
    "{tox_root}/docs/_build/html/index.html",
  ],
]

[tool.tox.env.lint]
description = "Lint derivkit using Ruff"
extras = ["lint"]
commands = [
  [
    "ruff",
    "check",
    "--fix",
    {replace = "posargs", extend = true},
  ],
]
