[build-system]
requires = [
    "setuptools >= 80",
    "setuptools_scm[simple] >= 8"
]
build-backend = "setuptools.build_meta"

[project]
name = "derivkit"
dynamic = ["version"]
dependencies = [
  "numdifftools",
  "numpy",
  "multiprocess",
  "scipy",
  "tox",
  "getdist",
  "emcee",
]
authors = [
  { name="Nikolina Šarčević", email="nikolina.sarcevic@gmail.com" },
  { name="Matthijs van der Wild", email="matthijs@vanderwild.com" },
  { name="Cynthia Trendafilova", email="cyntrendafilova@gmail.com" },
]
description = "A robust toolkit for stable numerical derivatives"
readme = "README.md"
requires-python = ">3.9"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.optional-dependencies]
"test" = [
    "pytest",
]
"docs" = [
    "sphinx",
    "sphinx-design",
    "sphinx-multiversion",
    "furo",
    "sphinx-copybutton",
    "sphinxawesome-theme",
    "sphinx-book-theme",
]
"lint" = [
    "ruff",
]
"jax" = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# Here we list the styling/formatting rules that Ruff should use.
# A list of available rules and what each rule does is provided at
# https://docs.astral.sh/ruff/rules
select = ["E", "F", "W", "Q", "I", "D", "PLC0415"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["derivkit"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
requires = ["tox>=4.22"]
labels = { test = ["py310", "py311", "py312", "py313"] }
envlist = [
  "docs",
  "docs-releases",
  "lint",
  "py310",
  "py311",
  "py312",
  "py313",
]

[tool.tox.env_run_base]
change_dir = "{tox_root}/tests"
description = "Run tests under {base_python}"
extras = ["test"]
allowlist_externals = ["pytest"]
commands = [
    [
        "pytest",
        {replace = "posargs", extend = true},
    ],
]

[tool.tox.env_run_base.setenv]
PIP_CACHE_DIR = "{tox_root}/.cache/pip"

[tool.tox.env.do]
description = "Build docs (HTML only) and open the local HTML index"
extras = ["docs"]
allowlist_externals = ["open"]
commands = [
  [
    "sphinx-apidoc",
    "-o", "{tox_root}/docs",
    "{tox_root}/src/derivkit",
    "--separate",
    "-f",
  ],

  # TEMP: skip doctest builder
  # [
  #   "sphinx-build",
  #   "-b", "doctest",
  #   "{tox_root}/docs",
  #   "{tox_root}/docs/_build/doctest",
  #   "--fail-on-warning",
  # ],

  [
    "sphinx-build",
    "-b", "html",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
  [
    "open",
    "{tox_root}/docs/_build/html/index.html",
  ],
]


[tool.tox.env.docs]
description = "Build the HTML files for the current state using Sphinx (skip doctest)"
extras = ["docs"]
commands = [
  [
    "sphinx-apidoc",
    "-o", "{tox_root}/docs",
    "{tox_root}/src/derivkit",
    "--separate",
    "-f",
  ],

  # TEMP: skip doctest builder
  # [
  #   "sphinx-build",
  #   "-b", "doctest",
  #   "{tox_root}/docs",
  #   "{tox_root}/docs/_build/doctest",
  #   "--fail-on-warning",
  # ],

  [
    "sphinx-build",
    "-b", "html",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
]


# This feels ugly because it mostly duplicates the docs environment.
# However, it is the simplest way to allow a user to build the docs
# for only their local working branch using the old `tox -e docs` rule.
[tool.tox.env.docs-releases]
description = "Build the documentation for derivkit releases using Sphinx"
extras = ["docs"]
allowlist_externals = ["cp"]
commands = [
  [
    "sphinx-apidoc",
    "-o", "{tox_root}/docs",
    "{tox_root}/src/derivkit",
    "--separate",
    "-f",
  ],
  [
    "sphinx-multiversion",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
  [
    "cp",
    "{tox_root}/docs/_templates/pages_redirect.html",
    "{tox_root}/docs/_build/html/index.html",
  ],
]

[tool.tox.env.lint]
description = "Lint derivkit using Ruff"
extras = ["lint"]
commands = [
  [
    "ruff",
    "check",
    "--fix",
    {replace = "posargs", extend = true},
  ],
]